Fix Supabase API key

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
     <script>
         // Supabase 配置
         const SUPABASE_URL = 'https://bsnyzpisrsywktjuzygf.supabase.co';
-        const SUPABASE_ANON_KEY = 'sb_publishable_GtuKKrCFE-K4SpTtfWZePg_CxJOalD8';
+        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImJzbnl6cGlzcnN5d2t0anV6eWdmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjkzMjMwMDMsImV4cCI6MjA4NDg5OTAwM30.WGIbauKKzX0RBw43LP_c7qxNUqDYTEYGB5XZBXbe4Y4';
 
         const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
