--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
 
             if (error) {
                 if (error.message.includes('Invalid login credentials')) {
-                    showMessage('用户不存在或密码错误，请先注册账号', 'error');
+                    showMessage('用户不存在或密码错误，请先注册账号或者尝试其他密码', 'error');
                 } else {
                     showMessage('登录失败：' + error.message, 'error');
                 }
