--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
     </script>
 
     <!-- 加载 Supabase SDK -->
-    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.min.js"></script>
 
     <!-- 应用逻辑 -->
     <script>
@@ -554,10 +554,10 @@
         var todos = [];
 
         // 检查 Supabase 是否加载成功
-        if (typeof window.supabase !== 'undefined' && window.supabase.createClient) {
+        if (window.supabase && typeof window.supabase.createClient === 'function') {
             supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
         } else {
-            console.error('Supabase SDK 加载失败');
+            console.error('Supabase SDK 加载失败，window.supabase =', window.supabase);
             showMessage('网络连接失败，请刷新页面重试', 'error');
         }
 
