--- a/index.html
+++ b/index.html
@@ -572,7 +572,9 @@
                 btn.textContent = '登录';
 
                 if (error) {
-                    if (error.message.includes('Invalid login credentials')) {
+                    if (error.message.includes('Email not confirmed')) {
+                        showMessage('邮箱尚未验证，请先到邮箱点击验证链接', 'error');
+                    } else if (error.message.includes('Invalid login credentials')) {
                         showMessage('用户不存在或密码错误，请先注册账号或者尝试其他密码', 'error');
                     } else {
                         showMessage('登录失败：' + error.message, 'error');
@@ -616,8 +618,7 @@
                 if (error) {
                     showMessage('注册失败：' + error.message, 'error');
                 } else {
-                    showMessage('注册成功！请查收验证邮件后登录', 'success');
-                    showLogin();
+                    showMessage('注册成功！请先到邮箱点击验证链接，然后再回来登录', 'success');
                 }
             } catch (e) {
                 btn.disabled = false;
